--- a/package.json
+++ b/package.json
@@ -77,10 +77,12 @@
     "npm-font-open-sans": "^1.1.0",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
+    "patch-package": "^6.5.0",
     "pixelmatch": "^5.3.0",
     "postcss": "^8.4.16",
     "postcss-cli": "^10.1.0",
     "postcss-inline-svg": "^5.0.0",
+    "postinstall-postinstall": "^2.1.0",
     "pretty-bytes": "^6.0.0",
     "puppeteer-core": "^19.3.0",
     "qrcode-terminal": "^0.12.0",
