--- a/package.json
+++ b/package.json
@@ -149,7 +149,8 @@
     "test-bundle-size": "build/run-node build/check-bundle-size.js",
     "prepublishOnly": "run-s build-flow-types build-dev build-prod-min build-prod build-csp build-css build-style-spec",
     "print-release-url": "node build/print-release-url.js",
-    "codegen": "build/run-node build/generate-style-code.js && build/run-node build/generate-struct-arrays.js"
+    "codegen": "build/run-node build/generate-style-code.js && build/run-node build/generate-struct-arrays.js",
+    "postinstall": "patch-package"
   },
   "files": [
     "build/",
