--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-unassert": "^0.5.0",
     "selenium-webdriver": "^4.4.0",
+    "serve-static": "^1.15.0",
     "shuffle-seed": "^1.1.6",
     "sinon": "^15.0.0",
     "st": "^3.0.0",
@@ -95,7 +96,7 @@
     "tap": "~16.3.2",
     "tape": "^5.6.1",
     "tape-filter": "^1.0.4",
-    "testem": "^3.10.0"
+    "testem": "^3.10.1"
   },
   "browser": {
     "./src/shaders/index.js": "./src/shaders/shaders.js",
