--- a/package.json
+++ b/package.json
@@ -135,6 +135,7 @@
     "watch-query": "SUITE_NAME=query testem -f test/integration/testem/testem.js",
     "test-render": "cross-env SUITE_NAME=render testem ci -f test/integration/testem/testem.js",
     "test-render-firefox": "cross-env BROWSER=Firefox SUITE_NAME=render testem ci -f test/integration/testem/testem.js",
+    "test-render-safari": "cross-env BROWSER=Safari SUITE_NAME=render testem ci -f test/integration/testem/testem.js",
     "test-render-prod": "BUILD=production SUITE_NAME=render testem ci -f test/integration/testem/testem.js",
     "test-render-csp": "BUILD=csp SUITE_NAME=render testem ci -f test/integration/testem/testem.js",
     "test-query": "SUITE_NAME=query testem ci -f test/integration/testem/testem.js",
