--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -364,8 +364,7 @@ jobs:
     steps:
       - attach_workspace:
           at: ~/
-      - browser-tools/install-browser-tools:
-          chrome-version: 91.0.4472.164
+      - browser-tools/install-browser-tools
       - run: yarn run build-token
       - run:
           name: Test Chrome
@@ -510,3 +509,5 @@ jobs:
           path: test/integration/render-tests
       - store_artifacts:
           path: "test/integration/render-tests/index.html"
+
+# VS Code Extension Version: 1.5.1
