Internal workflow package + ci updates (#428)
* Circle CI updates

* Update package names

* Fix persisting storage path

* Fix style specification tests

* Update bundle size checker

* Test

* Test

* Test

* Switch to notifier app scope

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mapbox-gl",
+  "name": "@mapbox/mapbox-gl-private",
   "description": "A WebGL interactive maps library",
   "version": "2.13.0-dev",
   "main": "dist/mapbox-gl.js",
