--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -162,7 +162,7 @@ workflows:
 defaults: &defaults
   docker:
     - image: cimg/node:14.16-browsers
-  working_directory: ~/mapbox-gl-js
+  working_directory: ~/mapbox-gl-js-internal
 
 jobs:
   prepare:
@@ -183,7 +183,7 @@ jobs:
       - persist_to_workspace:
           root: ~/
           paths:
-            - mapbox-gl-js
+            - mapbox-gl-js-internal
             - .ssh
 
   install-mbx-ci:
@@ -239,7 +239,7 @@ jobs:
       - persist_to_workspace:
           root: ~/
           paths:
-            - mapbox-gl-js/dist
+            - mapbox-gl-js-internal/dist
 
   check-bundle-size:
     <<: *defaults
@@ -402,10 +402,10 @@ jobs:
       - aws-cli/install
       - run:
           name: Upload benchmark
-          command: aws s3 cp --acl public-read --content-type application/javascript bench/versions/benchmarks_generated.js s3://mapbox-gl-js/${CIRCLE_TAG:-$CIRCLE_BRANCH}/benchmarks.js
+          command: aws s3 cp --acl private --content-type application/javascript bench/versions/benchmarks_generated.js s3://mapbox-gl-js-internal/${CIRCLE_TAG:-$CIRCLE_BRANCH}/benchmarks.js
       - run:
           name: Upload source maps
-          command: aws s3 cp --acl public-read --content-type application/javascript bench/versions/benchmarks_generated.js.map s3://mapbox-gl-js/${CIRCLE_TAG:-$CIRCLE_BRANCH}/benchmarks.js.map
+          command: aws s3 cp --acl private --content-type application/javascript bench/versions/benchmarks_generated.js.map s3://mapbox-gl-js-internal/${CIRCLE_TAG:-$CIRCLE_BRANCH}/benchmarks.js.map
 
   deploy-release:
     <<: *defaults
@@ -431,7 +431,7 @@ jobs:
     macos:
       xcode: 14.0.1 # macOS version 12.5.1 (Monterey)
     parallelism: 3
-    working_directory: ~/mapbox-gl-js
+    working_directory: ~/mapbox-gl-js-internal
     steps:
       - checkout
       - attach_workspace:
@@ -462,7 +462,7 @@ jobs:
     macos:
       xcode: 14.0.1 # macOS version 12.5.1 (Monterey)
     parallelism: 3
-    working_directory: ~/mapbox-gl-js
+    working_directory: ~/mapbox-gl-js-internal
     steps:
       - checkout
       - attach_workspace:
@@ -492,7 +492,7 @@ jobs:
   prepare-windows:
     executor:
       name: win/default
-    working_directory: ~/mapbox-gl-js
+    working_directory: ~/mapbox-gl-js-internal
     steps:
       - checkout
       - run: yarn --frozen-lockfile
@@ -512,13 +512,13 @@ jobs:
       - persist_to_workspace:
           root: ~/
           paths:
-            - mapbox-gl-js
+            - mapbox-gl-js-internal
 
   test-render-windows-chrome-dev:
     executor:
       name: win/default
     parallelism: 4
-    working_directory: ~/mapbox-gl-js
+    working_directory: ~/mapbox-gl-js-internal
     steps:
       - attach_workspace:
           at: ~/
