--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,52 +56,6 @@ workflows:
           filters:
             tags:
               only: /.*/
-      - test-render-linux-chrome-dev:
-          requires:
-            - prepare
-          filters:
-            tags:
-              only: /.*/
-      - test-render-linux-firefox-dev:
-          requires:
-            - prepare
-          filters:
-            tags:
-              only: /.*/
-      - test-render-mac-chrome-dev:
-          filters:
-            tags:
-              only: /.*/
-      - test-render-mac-chrome-webgl2-dev:
-          filters:
-            tags:
-              only: /.*/
-      - test-render-mac-safari-dev:
-          filters:
-            tags:
-              only: /.*/
-      - prepare-windows:
-          filters:
-            tags:
-              only: /.*/
-      - test-render-windows-chrome-dev:
-          requires:
-            - prepare-windows
-          filters:
-            tags:
-              only: /.*/
-      - test-render-linux-chrome-prod:
-          requires:
-            - prepare
-          filters:
-            tags:
-              only: /.*/
-      - test-render-linux-chrome-csp:
-          requires:
-            - prepare
-          filters:
-            tags:
-              only: /.*/
       - test-query:
           requires:
             - prepare
@@ -161,16 +115,91 @@ workflows:
               only: /v[0-9]+.[0-9]+.[0-9]+(-.+)?/
             branches:
               ignore: /.*/
+  test-render-linux:
+    jobs:
+      - prepare-linux:
+          filters:
+            tags:
+              only: /.*/
+      - test-render-linux-chrome-dev:
+          requires:
+            - prepare-linux
+          filters:
+            tags:
+              only: /.*/
+      - test-render-linux-firefox-dev:
+          requires:
+            - prepare-linux
+          filters:
+            tags:
+              only: /.*/
+      - test-render-linux-chrome-prod:
+          requires:
+            - prepare-linux
+          filters:
+            tags:
+              only: /.*/
+      - test-render-linux-chrome-csp:
+          requires:
+            - prepare-linux
+          filters:
+            tags:
+              only: /.*/
+  test-render-mac:
+    jobs:
+      - prepare-mac:
+          filters:
+            tags:
+              only: /.*/
+      - test-render-mac-chrome-dev:
+          requires:
+            - prepare-mac
+          filters:
+            tags:
+              only: /.*/
+      - test-render-mac-chrome-webgl2-dev:
+          requires:
+            - prepare-mac
+          filters:
+            tags:
+              only: /.*/
+      - test-render-mac-safari-dev:
+          requires:
+            - prepare-mac
+          filters:
+            tags:
+              only: /.*/
+  test-render-windows:
+    jobs:
+      - prepare-windows:
+          filters:
+            tags:
+              only: /.*/
+      - test-render-windows-chrome-dev:
+          requires:
+            - prepare-windows
+          filters:
+            tags:
+              only: /.*/
 
-
-defaults: &defaults
+linux-defaults: &linux-defaults
   docker:
-    - image: cimg/node:14.16-browsers
+    - image: cimg/node:14.21-browsers
+  working_directory: ~/mapbox-gl-js
+
+mac-defaults: &mac-defaults
+  macos:
+    xcode: 14.2.0 # macOS 12.6 (Monterey)
+  working_directory: ~/mapbox-gl-js
+
+windows-defaults: &windows-defaults
+  executor:
+    name: win/default
   working_directory: ~/mapbox-gl-js
 
 jobs:
   prepare:
-    <<: *defaults
+    <<: *linux-defaults
     steps:
       - checkout
       - restore_cache:
@@ -191,7 +220,7 @@ jobs:
             - .ssh
 
   install-mbx-ci:
-    <<: *defaults
+    <<: *linux-defaults
     steps:
       - run:
           name: Install mbx-ci
@@ -208,7 +237,7 @@ jobs:
             - mbx-ci
 
   lint:
-    <<: *defaults
+    <<: *linux-defaults
     steps:
       - attach_workspace:
           at: ~/
@@ -224,7 +253,7 @@ jobs:
             - '.eslintcache'
 
   build:
-    <<: *defaults
+    <<: *linux-defaults
     steps:
       - attach_workspace:
           at: ~/
@@ -246,7 +275,7 @@ jobs:
             - mapbox-gl-js/dist
 
   check-bundle-size:
-    <<: *defaults
+    <<: *linux-defaults
     steps:
       - attach_workspace:
           at: ~/
@@ -256,72 +285,21 @@ jobs:
             node build/check-bundle-size.js
 
   test-flow:
-    <<: *defaults
+    <<: *linux-defaults
     steps:
       - attach_workspace:
           at: ~/
       - run: yarn run test-flow
 
   test-unit:
-    <<: *defaults
+    <<: *linux-defaults
     steps:
       - attach_workspace:
           at: ~/
       - run: yarn run test-unit
 
-  test-render-linux-chrome-dev:
-    <<: *defaults
-    steps:
-      - attach_workspace:
-          at: ~/
-      - browser-tools/install-chrome
-      - run:
-          name: Running tests in parallel
-          command: |
-            yarn run test-render
-      - store_test_results:
-          path: test/integration/render-tests
-      - store_artifacts:
-          path: "test/integration/render-tests/index.html"
-
-  test-render-linux-firefox-dev:
-    <<: *defaults
-    steps:
-      - attach_workspace:
-          at: ~/
-      - browser-tools/install-firefox
-      - run: yarn run test-render-firefox
-      - store_test_results:
-          path: test/integration/render-tests
-      - store_artifacts:
-          path: "test/integration/render-tests/index.html"
-
-  test-render-linux-chrome-prod:
-    <<: *defaults
-    steps:
-      - attach_workspace:
-          at: ~/
-      - browser-tools/install-chrome
-      - run: yarn run test-render-prod
-      - store_test_results:
-          path: test/integration/render-tests
-      - store_artifacts:
-          path: "test/integration/render-tests/index.html"
-
-  test-render-linux-chrome-csp:
-    <<: *defaults
-    steps:
-      - attach_workspace:
-          at: ~/
-      - browser-tools/install-chrome
-      - run: yarn run test-render-csp
-      - store_test_results:
-          path: test/integration/render-tests
-      - store_artifacts:
-          path: "test/integration/render-tests/index.html"
-
   test-query:
-    <<: *defaults
+    <<: *linux-defaults
     steps:
       - attach_workspace:
           at: ~/
@@ -333,7 +311,7 @@ jobs:
           path: "test/integration/query-tests/index.html"
 
   test-webpack:
-    <<: *defaults
+    <<: *linux-defaults
     steps:
       - attach_workspace:
           at: ~/
@@ -348,14 +326,14 @@ jobs:
           path: "test/build/transpilation"
 
   test-style-spec:
-    <<: *defaults
+    <<: *linux-defaults
     steps:
       - attach_workspace:
           at: ~/
       - run: yarn run test-style-spec
 
   collect-stats:
-    <<: *defaults
+    <<: *linux-defaults
     steps:
       - attach_workspace:
           at: ~/
@@ -369,7 +347,7 @@ jobs:
           command: aws s3 cp data.json.gz s3://mapbox-loading-dock/raw/gl_js.perf_metrics_staging/ci/`git show -s --date=short --format=%cd-%h HEAD`.json.gz
 
   test-browser:
-    <<: *defaults
+    <<: *linux-defaults
     steps:
       - attach_workspace:
           at: ~/
@@ -389,14 +367,14 @@ jobs:
           command: yarn run test-browser
 
   test-expressions:
-    <<: *defaults
+    <<: *linux-defaults
     steps:
       - attach_workspace:
           at: ~/
       - run: yarn run test-expressions
 
   deploy-benchmarks:
-    <<: *defaults
+    <<: *linux-defaults
     steps:
       - attach_workspace:
           at: ~/
@@ -412,7 +390,7 @@ jobs:
           command: aws s3 cp --acl public-read --content-type application/javascript bench/versions/benchmarks_generated.js.map s3://mapbox-gl-js/${CIRCLE_TAG:-$CIRCLE_BRANCH}/benchmarks.js.map
 
   deploy-release:
-    <<: *defaults
+    <<: *linux-defaults
     steps:
       - attach_workspace:
           at: ~/
@@ -431,11 +409,79 @@ jobs:
           command: |
             bash ./build/upload.sh
 
-  test-render-mac-chrome-dev:
-    macos:
-      xcode: 14.0.1 # macOS version 12.5.1 (Monterey)
-    parallelism: 3
-    working_directory: ~/mapbox-gl-js
+  prepare-linux:
+    <<: *linux-defaults
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - v0-linux-yarn-{{ .Branch }}-{{ checksum "yarn.lock" }}
+            - v0-linux-yarn-{{ .Branch }}-
+            - v0-linux-yarn-
+      - browser-tools/install-chrome
+      - browser-tools/install-firefox
+      - run: yarn --frozen-lockfile --cache-folder ~/.cache/yarn
+      - run: yarn run build-dev
+      - save_cache:
+          key: v0-linux-yarn-{{ .Branch }}-{{ checksum "yarn.lock" }}
+          paths:
+           - ~/.cache/yarn
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - mapbox-gl-js
+            - .ssh
+
+  test-render-linux-chrome-dev:
+    <<: *linux-defaults
+    steps:
+      - attach_workspace:
+          at: ~/
+      - run:
+          name: Running tests in parallel
+          command: |
+            yarn run test-render
+      - store_test_results:
+          path: test/integration/render-tests
+      - store_artifacts:
+          path: "test/integration/render-tests/index.html"
+
+  test-render-linux-chrome-prod:
+    <<: *linux-defaults
+    steps:
+      - attach_workspace:
+          at: ~/
+      - run: yarn run test-render-prod
+      - store_test_results:
+          path: test/integration/render-tests
+      - store_artifacts:
+          path: "test/integration/render-tests/index.html"
+
+  test-render-linux-chrome-csp:
+    <<: *linux-defaults
+    steps:
+      - attach_workspace:
+          at: ~/
+      - run: yarn run test-render-csp
+      - store_test_results:
+          path: test/integration/render-tests
+      - store_artifacts:
+          path: "test/integration/render-tests/index.html"
+
+  test-render-linux-firefox-dev:
+    <<: *linux-defaults
+    steps:
+      - attach_workspace:
+          at: ~/
+      - browser-tools/install-firefox
+      - run: yarn run test-render-firefox
+      - store_test_results:
+          path: test/integration/render-tests
+      - store_artifacts:
+          path: "test/integration/render-tests/index.html"
+
+  prepare-mac:
+    <<: *mac-defaults
     steps:
       - checkout
       - attach_workspace:
@@ -452,6 +498,17 @@ jobs:
           paths:
            - ~/.cache/yarn
       - run: yarn run build-dev
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - mapbox-gl-js
+
+  test-render-mac-chrome-dev:
+    <<: *mac-defaults
+    parallelism: 3
+    steps:
+      - attach_workspace:
+          at: ~/
       - run:
           name: Creating test list
           command: |
@@ -463,26 +520,11 @@ jobs:
           path: "test/integration/render-tests/index.html"
 
   test-render-mac-chrome-webgl2-dev:
-    macos:
-      xcode: 14.0.1 # macOS version 12.5.1 (Monterey)
+    <<: *mac-defaults
     parallelism: 3
-    working_directory: ~/mapbox-gl-js
     steps:
-      - checkout
       - attach_workspace:
           at: ~/
-      - restore_cache:
-          keys:
-            - v0-mac-yarn-{{ .Branch }}-{{ checksum "yarn.lock" }}
-            - v0-mac-yarn-{{ .Branch }}-
-            - v0-mac-yarn-
-      - browser-tools/install-chrome
-      - run: yarn --frozen-lockfile --cache-folder ~/.cache/yarn
-      - save_cache:
-          key: v0-mac-yarn-{{ .Branch }}-{{ checksum "yarn.lock" }}
-          paths:
-           - ~/.cache/yarn
-      - run: yarn run build-dev
       - run:
           name: Creating test list
           command: |
@@ -494,26 +536,11 @@ jobs:
           path: "test/integration/render-tests/index.html"
 
   test-render-mac-safari-dev:
-    macos:
-      xcode: 14.0.1 # macOS version 12.5.1 (Monterey)
-    parallelism: 3
-    working_directory: ~/mapbox-gl-js
+    <<: *mac-defaults
+    parallelism: 2
     steps:
-      - checkout
       - attach_workspace:
           at: ~/
-      - restore_cache:
-          keys:
-            - v0-mac-yarn-{{ .Branch }}-{{ checksum "yarn.lock" }}
-            - v0-mac-yarn-{{ .Branch }}-
-            - v0-mac-yarn-
-      - browser-tools/install-chrome
-      - run: yarn --frozen-lockfile --cache-folder ~/.cache/yarn
-      - save_cache:
-          key: v0-mac-yarn-{{ .Branch }}-{{ checksum "yarn.lock" }}
-          paths:
-           - ~/.cache/yarn
-      - run: yarn run build-dev
       - run:
           name: Creating test list
           command: |
@@ -525,9 +552,7 @@ jobs:
           path: "test/integration/render-tests/index.html"
 
   prepare-windows:
-    executor:
-      name: win/default
-    working_directory: ~/mapbox-gl-js
+    <<: *windows-defaults
     steps:
       - checkout
       - run: yarn --frozen-lockfile
@@ -550,10 +575,8 @@ jobs:
             - mapbox-gl-js
 
   test-render-windows-chrome-dev:
-    executor:
-      name: win/default
+    <<: *windows-defaults
     parallelism: 4
-    working_directory: ~/mapbox-gl-js
     steps:
       - attach_workspace:
           at: ~/
