--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -461,6 +461,7 @@ jobs:
     steps:
       - attach_workspace:
           at: ~/
+      - browser-tools/install-chrome
       - run: yarn run test-render-csp
       - store_test_results:
           path: test/integration/render-tests
