Enable LIBGL_ALWAYS_SOFTWARE for Firefox render tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -474,7 +474,11 @@ jobs:
       - attach_workspace:
           at: ~/
       - browser-tools/install-firefox
-      - run: yarn run test-render-firefox
+      - run:
+          name: test-render-firefox
+          environment:
+            LIBGL_ALWAYS_SOFTWARE: 1
+          command: yarn run test-render-firefox
       - store_test_results:
           path: test/integration/render-tests
       - store_artifacts:
