--- a/package.json
+++ b/package.json
@@ -145,6 +145,7 @@
     "test-style-spec": "cd src/style-spec && npm test",
     "prepublishOnly": "run-s build-flow-types build-dev build-prod-min build-prod build-csp build-css build-style-spec",
     "print-release-url": "node build/print-release-url.js",
+    "check-bundle-size": "node build/check-bundle-size.js",
     "codegen": "build/run-node build/generate-style-code.js && build/run-node build/generate-struct-arrays.js"
   },
   "files": [
