Revert macOS yarn cache

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -456,11 +456,10 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-            - v1-mac-yarn-{{ .Branch }}-{{ checksum "yarn.lock" }}
-            - v1-mac-yarn-{{ .Branch }}-
-            - v1-mac-yarn-
-      - run: nvm install && nvm use
-      - run: npm install -g yarn
+            - v0-mac-yarn-{{ .Branch }}-{{ checksum "yarn.lock" }}
+            - v0-mac-yarn-{{ .Branch }}-
+            - v0-mac-yarn-
+      - run: nvm install && nvm use && npm install -g yarn
       - run: yarn --frozen-lockfile --cache-folder ~/.cache/yarn
       - save_cache:
           key: v0-mac-yarn-{{ .Branch }}-{{ checksum "yarn.lock" }}
