--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -459,6 +459,7 @@ jobs:
             - v0-mac-yarn-{{ .Branch }}-{{ checksum "yarn.lock" }}
             - v0-mac-yarn-{{ .Branch }}-
             - v0-mac-yarn-
+      - run: nvm install && cat .nvmrc | nvm alias default `xargs`
       - run: yarn --frozen-lockfile --cache-folder ~/.cache/yarn
       - save_cache:
           key: v0-mac-yarn-{{ .Branch }}-{{ checksum "yarn.lock" }}
